<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:id="@+id/new_book_fragment">

    <TextView
        android:id="@+id/new_book_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_book_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/new_book_name_textview"/>

    <EditText
        android:id="@+id/new_book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_book_reader_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"
        android:hint="@string/new_book_name_hint"/>


    <TextView
        android:id="@+id/new_book_reader_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_book_reader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/new_book_reader_textview"/>

    <EditText
        android:id="@+id/new_book_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_book_pages_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp"
        android:hint="@string/new_book_reader_hint"/>


    <TextView
        android:id="@+id/new_book_pages_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_book_pages"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/new_book_pages_textview"/>

    <EditText
        android:id="@+id/new_book_pages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_book_submit_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="72dp"
        android:hint="@string/new_book_pages_hint"
        android:inputType="number"/>


    <Button
        android:id="@+id/new_book_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:text="@string/submit_button"/>

</RelativeLayout>