<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
    >

    <TextView
        android:id="@+id/view_book_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_reader_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/new_book_reader_textview"/>

    <TextView
        android:id="@+id/view_reader_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_pages_read_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/view_pages_read_label"/>

    <TextView
        android:id="@+id/view_pages_read_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_total_pages_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/new_book_pages_textview"/>

    <TextView
        android:id="@+id/view_total_pages_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_date_start_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/view_date_start_label"/>

    <TextView
        android:id="@+id/view_date_start_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_update_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp"/>

    <Button
        android:id="@+id/view_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/view_cancel_button"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:text="@string/view_update_button"/>

    <Button
        android:id="@+id/view_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/view_cancel_button"/>

</RelativeLayout>